--- a/Cleaning Data [1].ipynb
+++ b/Cleaning Data [1].ipynb
@@ -34,12 +34,12 @@
     "\n",
     "    ##Root_dir = /home/ubuntu/datascience\n",
     "\n",
-    "\tโดยการสร้าง directory ใหม่ที่ /sentiment_file/[project_name]/[directory]\n",
+    "\tโดยการสร้าง directory ใหม่ที่ Root_dir/sentiment_file/[project_name]/[directory]\n",
     "\n",
     "\t** ตัวอย่างเช่น **\n",
     "    \n",
-    "    /sentiment_file/project_true/dir_DEC/before.csv , <--- Before file\n",
-    "    /sentiment_file/project_true/dir_DEC/after.csv <--- After file\n",
+    "    Root_dir/sentiment_file/project_true/dir_DEC/before.csv , <--- Before file\n",
+    "    Root_dir/sentiment_file/project_true/dir_DEC/after.csv <--- After file\n",
     "    \n",
     "3.การใช้งานโปรแกรม\n",
     "\n",
@@ -47,13 +47,13 @@
     "\n",
     "4.ผลลัพธ์\n",
     "\n",
-    "ผลลัพธ์จะถูกจัดเก็บไว้ที่  /sentiment_file/[project_name]/[directory]/dataset.txt\n",
+    "ผลลัพธ์จะถูกจัดเก็บไว้ที่  Root_dir/sentiment_file/[project_name]/[directory]/dataset.txt\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +172,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
