--- a/Dataset-summary-lexicon-report [3].ipynb
+++ b/Dataset-summary-lexicon-report [3].ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## รายงานผลลัพธ์ ##\n",
+    "## Lexicon Report ##\n",
     "\n",
     "##Root_dir = /home/ubuntu/datascience\n",
     "\n",
     "การออกรายงานผลลัพธ์จะต้องใช้ไฟล์ Dataset ซึ่งจะต้องอัพโหลดไฟล์ไว้ที่ \n",
     "\n",
     "Root_dir/sentiment_file/[project_name]/Dataset/dataset.txt เท่านั้น\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -26,16 +25,42 @@
     "# Import Lib\n",
     "from polyglot.text import Text \n",
     "from __future__ import division\n",
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "###-- Project Name --###\n",
     "\n",
     "project_name = \"true\" # <--- Rename true,officeM ...\n",
     "\n",
-    "### Config Lexicon ###\n",
+    " ### Config Lexicon ###\n",
     "\n",
-    "lexicon = \"officeM\" # true,officeM ...\n",
-    "\n",
+    "lexicon = \"officeM\" # true,officeM ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- dic_score() : ฟังก์ชั่นหาผลลัพธ์ของคำ เช่น สวัสดี = 1.24543435\n",
+    "- dic_word() : ฟังก์ชั่นหาผลลัพธ์ทั้งประโยค \n",
+    "- dic_sentiment() : ฟังก์ชั่นหาผลรวม positive และ negative ของ Sentence เช่น (1.423234,-0.3342)\n",
+    "- dic_word_sum() : ฟังก์ชั่นหาผลรวมของคำ (positive+negative+neutral) ## ใช้สำหรับหาร\n",
+    "- dic_sentiment_sum() : ฟังก์ชั่นหาผลคะแนน (positive+negative) ## ผลคะแนนที่ได้จาก lexicon\n",
+    "- fraction_sum() : ฟังก์ชั่นรวมผลของ ( dic_sentiment_sum() / dic_word_sum() ) ## ผลคะแนนที่ได้จาก lexicon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def dic_score(word):  \n",
     "\n",
@@ -44,8 +69,6 @@
     "    for line in file:\n",
     "\n",
     "        value = line.split(\"||\")\n",
-    "        \n",
-    "#         print value[0]\n",
     "\n",
     "        if word == value[2].strip() :\n",
     "            \n",
@@ -71,44 +94,27 @@
     "\n",
     "        for w in text.words:\n",
     "\n",
-    "#                 print w , w.polarity\n",
-    "\n",
     "                result = dic_score(w) \n",
     "\n",
     "                if result is None :\n",
     "\n",
     "                    result = 0\n",
-    "\n",
-    "#                 total = total + float(result)\n",
-    "                \n",
-    "                \n",
-    "#                 print w , result\n",
     "                \n",
     "                if result < 0 : \n",
     "                    \n",
-    "                    negative +=1\n",
-    "                    \n",
-    "#                     print \"negative\"\n",
-    "                \n",
+    "                    negative +=1                \n",
     "                \n",
     "                if result == 0 :\n",
     "                    \n",
     "                    neutral +=1\n",
-    "                    \n",
-    "#                     print \"neutral\"\n",
     "                \n",
     "                if result > 0 :\n",
     "                    \n",
     "                    positive +=1\n",
-    "                    \n",
-    "#                     print \"positive\"\n",
-    " \n",
-    "        \n",
+    "         \n",
     "        sentence = (positive,negative,neutral)\n",
     "                \n",
-    "    return sentence\n",
-    "    \n",
-    "    \n",
+    "    return sentence    \n",
     "\n",
     "def dic_sentiment(sentence):\n",
     "    \n",
@@ -125,42 +131,24 @@
     "\n",
     "        for w in text.words:\n",
     "\n",
-    "#                 print w , w.polarity\n",
-    "\n",
     "                result = dic_score(w) \n",
     "\n",
     "                if result is None :\n",
     "\n",
     "                    result = 0\n",
-    "\n",
-    "#                 total = total + float(result)\n",
-    "                \n",
-    "                \n",
-    "#                 print w , result\n",
     "                \n",
     "                if result < 0 : \n",
     "                    \n",
-    "                    negative = negative + float(result)\n",
-    "                    \n",
-    "#                     print \"negative\"\n",
-    "                \n",
+    "                    negative = negative + float(result)                \n",
     "                \n",
     "                if result == 0 :\n",
     "                    \n",
     "                    neutral = neutral + float(result)\n",
-    "                    \n",
-    "#                     print \"neutral\"\n",
     "                \n",
     "                if result > 0 :\n",
     "                    \n",
-    "                    positive = positive + float(result)\n",
-    "                    \n",
-    "#                     print \"positive\"\n",
-    "                    \n",
-    "                \n",
-    " \n",
-    " \n",
-    "        \n",
+    "                    positive = positive + float(result)                    \n",
+    "                                             \n",
     "        sentence = positive,negative\n",
     "                \n",
     "    return sentence\n",
@@ -178,44 +166,27 @@
     "\n",
     "        for w in text.words:\n",
     "\n",
-    "#                 print (w , w.polarity)\n",
-    "\n",
     "                result = dic_score(w) \n",
     "\n",
     "                if result is None :\n",
     "\n",
     "                    result = 0\n",
-    "\n",
-    "#                 total = total + float(result)\n",
-    "                \n",
-    "                \n",
-    "#                 print w , result\n",
     "                \n",
     "                if result < 0 : \n",
     "                    \n",
     "                    negative +=1\n",
-    "                    \n",
-    "#                     print \"negative\"\n",
-    "                \n",
     "                \n",
     "                if result == 0 :\n",
     "                    \n",
     "                    neutral +=1\n",
-    "                    \n",
-    "#                     print \"neutral\"\n",
     "                \n",
     "                if result > 0 :\n",
     "                    \n",
     "                    positive +=1\n",
-    "                    \n",
-    "#                     print \"positive\"\n",
-    " \n",
     "        \n",
     "        sentence = positive+negative+neutral\n",
     "                \n",
     "    return sentence\n",
-    "    \n",
-    "    \n",
     "\n",
     "def dic_sentiment_sum(sentence):\n",
     "    \n",
@@ -225,48 +196,29 @@
     "    positive = 0\n",
     "    negative =  0\n",
     "    neutral = 0 \n",
-    "    \n",
     "    total = 0\n",
     "\n",
     "    if sentence != '' :\n",
     "\n",
     "        for w in text.words:\n",
     "\n",
-    "#                 print w , w.polarity\n",
-    "\n",
     "                result = dic_score(w) \n",
     "\n",
     "                if result is None :\n",
     "\n",
-    "                    result = 0\n",
-    "\n",
-    "#                 total = total + float(result)\n",
-    "                \n",
-    "                \n",
-    "#                 print w , result\n",
+    "                    result = 0 \n",
     "                \n",
     "                if result < 0 : \n",
     "                    \n",
-    "                    negative = negative + float(result)\n",
-    "                    \n",
-    "#                     print \"negative\"\n",
-    "                \n",
+    "                    negative = negative + float(result) \n",
     "                \n",
     "                if result == 0 :\n",
     "                    \n",
-    "                    neutral = neutral + float(result)\n",
-    "                    \n",
-    "#                     print \"neutral\"\n",
+    "                    neutral = neutral + float(result) \n",
     "                \n",
     "                if result > 0 :\n",
     "                    \n",
-    "                    positive = positive + float(result)\n",
-    "                    \n",
-    "#                     print \"positive\"\n",
-    "                    \n",
-    "                \n",
-    " \n",
-    " \n",
+    "                    positive = positive + float(result) \n",
     "        \n",
     "        sentence = positive+negative\n",
     "                \n",
@@ -284,6 +236,22 @@
     "    \n",
     "    return total\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ผลลัพธ์ ###\n",
+    "\n",
+    "##Root_dir = /home/ubuntu/datascience\n",
+    "\n",
+    "ผลลัพธ์ถูกจัดเก็บไว้ที่ Root_dir/sentiment_file/[project_name]/lexicon_report/..\n",
+    "\n",
+    "ไฟล์ที่จะได้รับ \n",
+    "\n",
+    " - 1.lexicon_[project_name]_summary.txt\n",
+    " - 2.answer_[project_name.txt"
    ]
   },
   {
@@ -372,16 +340,10 @@
     "            \n",
     "            tneg +=1\n",
     "            Ti+=2\n",
-    "\n",
-    "# ----------------------------------   \n",
-    "            \n",
-    "#         print word\n",
-    "    \n",
-    "#         print \"[\"+str(dic_word(word))+\"\\t\"+str(dic_sentiment(word))+\"\\t\"+str(fraction_sum(word))+\"\\t\"+result[6]+\"\\t\"+result[5]+\"\\t\"+word+\"]\"\n",
     "        \n",
     "        if word != '' :\n",
     "            \n",
-    "            with open('sentiment_file/'+project_name+'/Dataset/'+'lexicon_'+lexicon+'_summary.txt', 'a') as the_file:  \n",
+    "            with open('sentiment_file/'+project_name+'/lexicon_report/'+'lexicon_'+lexicon+'_summary.txt', 'a') as the_file:  \n",
     "\n",
     "                    the_file.write(\"[\"+str(dic_word(word))+\"\\t\"+str(dic_sentiment(word))+\"\\t\"+str(fraction_sum(word))+\"\\t\"+result[6]+\"\\t\"+result[5]+\"\\t\"+word+\"]\\n\")\n",
     "\n",
@@ -393,7 +355,7 @@
     "print (Ax)\n",
     "print (Tx)\n",
     "\n",
-    "with open('sentiment_file/'+project_name+'/Dataset/'+'answer_'+lexicon+'.txt', 'a') as the_file:  \n",
+    "with open('sentiment_file/'+project_name+'/lexicon_report/'+'answer_'+lexicon+'.txt', 'a') as the_file:  \n",
     "\n",
     "                    the_file.write(str(Ax)+\"\\n\"+str(Tx))"
    ]
