--- a/Dataset-summary-lexicon-report [3].ipynb
+++ b/Dataset-summary-lexicon-report [3].ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Lexicon Report ##\n",
     "\n",
-    "##Root_dir = /home/ubuntu/datascience\n",
+    "#### Root_dir = /home/ubuntu/datascience\n",
     "\n",
     "การออกรายงานผลลัพธ์จะต้องใช้ไฟล์ Dataset ซึ่งจะต้องอัพโหลดไฟล์ไว้ที่ \n",
     "\n",
