--- a/Dataset-summary-polyglot-report [4].ipynb
+++ b/Dataset-summary-polyglot-report [4].ipynb
@@ -144,7 +144,7 @@
    "source": [
     "### ผลลัพธ์ ###\n",
     "\n",
-    "##Root_dir = /home/ubuntu/datascience\n",
+    "#### Root_dir = /home/ubuntu/datascience\n",
     "\n",
     "ผลลัพธ์ถูกจัดเก็บไว้ที่ Root_dir/sentiment_file/[project_name]/polyglot_report/..\n",
     "\n",
