--- a/Dataset-summary-lexicon-report [3].ipynb
+++ b/Dataset-summary-lexicon-report [3].ipynb
@@ -244,7 +244,7 @@
    "source": [
     "### ผลลัพธ์ ###\n",
     "\n",
-    "##Root_dir = /home/ubuntu/datascience\n",
+    "#### Root_dir = /home/ubuntu/datascience\n",
     "\n",
     "ผลลัพธ์ถูกจัดเก็บไว้ที่ Root_dir/sentiment_file/[project_name]/lexicon_report/..\n",
     "\n",
