--- a/[2] Lexicon-start.ipynb
+++ b/[2] Lexicon-start.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# from nltk import word_tokenize as wdtk, FreqDist as fqdist\n",
@@ -60,9 +62,8 @@
    },
    "outputs": [],
    "source": [
-    "###-- Project Name --###\n",
-    "\n",
-    "project_name = \"true\" # <--- Rename \n",
+    "### Project Name ### \n",
+    "project_name = \"officeM\" # <--- Rename \n",
     "\n",
     "### Config Project Name ###\n",
     "answer = \"dataset.txt\" \n",
@@ -104,7 +105,9 @@
     "                        \n",
     "                            for w in text.words:\n",
     "                        \n",
-    "                                neu_doc.append(w.encode('utf-8'))\n",
+    "#                                 neu_doc.append(w.encode('utf-8'))\n",
+    "                                neu_doc.append(w)\n",
+    "\n",
     "                            \n",
     "                        except:\n",
     "                                \n",
@@ -120,9 +123,10 @@
     "                        try:\n",
     "                        \n",
     "                            for w in text.words:\n",
-    "                            \n",
-    "                                #print(\"{:<16}{:>2}\".format(w.encode('utf-8'), pol))\n",
-    "                                pos_doc.append(w.encode('utf-8'))\n",
+    "\n",
+    "#                                 pos_doc.append(w.encode('utf-8'))\n",
+    "                                pos_doc.append(w)\n",
+    "\n",
     "                            \n",
     "                        except:\n",
     "                                \n",
@@ -139,14 +143,16 @@
     "                            for w in text.words:\n",
     "                            \n",
     "                                #print(\"{:<16}{:>2}\".format(w.encode('utf-8'), pol))\n",
-    "                                neg_doc.append(w.encode('utf-8'))\n",
+    "#                                 neg_doc.append(w.encode('utf-8'))\n",
+    "                                neg_doc.append(w)\n",
+    "\n",
     "                            \n",
     "                        except:\n",
     "                                \n",
     "                                print (\"NULL\")\n",
     "                                \n",
     "                                \n",
-    "print \"Total : \"+str(i)\n",
+    "# print \"Total : \"+str(i)\n",
     "\n",
     "### Check Folder and Files\n",
     "\n",
@@ -212,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def check_pos(word): \n",
@@ -285,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fraction(params):\n",
@@ -311,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# ---------------- Term Score ---------------- #\n",
@@ -385,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def pos_summary() :\n",
@@ -471,7 +485,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# --- Create file empty lexicon\n",
@@ -574,14 +590,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
