--- a/[5] Start-threshold.ipynb
+++ b/[5] Start-threshold.ipynb
@@ -2,37 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: 'sentiment_file/true/lexicon_report/lexicon_true_summary.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-158-db7c80f2f7ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mz\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m0.05\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mz\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sentiment_file/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mproject_name\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms_type\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"_report/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ms_type\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"_\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mproject_name\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"_summary.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mins\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'sentiment_file/true/lexicon_report/lexicon_true_summary.txt'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "### threshold session ###\n",
     "\n",
     "from polyglot.text import Text \n",
     "from __future__ import division\n",
     "import pandas as pd\n",
-    "import os\n",
+    "import os, errno\n",
+    "\n",
+    "# -- Format Type -- #\n",
+    "\n",
+    "# polyglot \n",
+    "# [(pos,neg,neu)  polz  before  after  text]\n",
+    "\n",
+    "# lexicon\n",
+    "# [(pos,neg,neu)  (pos,neg)  polz  before  after  text]\n",
+    "\n",
+    "\n",
+    "### -- Select polyglot & lexicon -- ###\n",
+    "\n",
+    "s_type = \"lexicon\" \n",
     "\n",
     "### -- Project Name -- ###\n",
     "\n",
-    "project_name = \"true\" # <--- Rename \n",
+    "project_name = \"true\" \n",
     "\n",
+    "### ถ้ากำหนดประเภทเป็น lexicon ต้องระบุชื่อของ lexicon ที่ต้องการทำผลคะแนนด้วย\n",
     "\n",
-    "### -- polyglot & lexicon -- ###\n",
+    "lexicon = 'officeM' # EXP true,office\n",
     "\n",
-    "s_type = \"lexicon\" \n",
     "\n",
     "def is_number(n):\n",
     "    try:\n",
@@ -43,6 +46,26 @@
     "        return 0\n",
     "    \n",
     "    return n.strip()\n",
+    "\n",
+    "\n",
+    "\n",
+    "if s_type == \"polyglot\" :\n",
+    "    \n",
+    "        x_before = 2 \n",
+    "        x_after = 3\n",
+    "        x_tu = 1\n",
+    "        file_new = 'sentiment_file/'+project_name+'/'+s_type+'_report/threshold/threshold.txt'\n",
+    "        file_target = \"sentiment_file/\"+project_name+\"/\"+s_type+\"_report/\"+s_type+\"_\"+project_name+\"_summary.txt\"\n",
+    "        file_write = 'sentiment_file/'+project_name+'/'+s_type+'_report/threshold/threshold.txt'\n",
+    "    \n",
+    "if s_type == \"lexicon\" :\n",
+    "\n",
+    "        x_before = 3\n",
+    "        x_after = 4\n",
+    "        x_tu = 2\n",
+    "        file_new = 'sentiment_file/'+project_name+'/'+s_type+'_report/threshold/'+s_type+\"_\"+lexicon+'_threshold.txt'\n",
+    "        file_target = \"sentiment_file/\"+project_name+\"/\"+s_type+\"_report/\"+s_type+\"_\"+lexicon+\"_summary.txt\"\n",
+    "        file_write = 'sentiment_file/'+project_name+'/'+s_type+'_report/threshold/'+s_type+\"_\"+lexicon+'_threshold.txt'\n",
     "\n",
     "\n",
     "### Check Folder and Files\n",
@@ -57,12 +80,12 @@
     "\n",
     "### Close a new files\n",
     "\n",
-    "f= open('sentiment_file/'+project_name+'/'+s_type+'_report/threshold/threshold.txt',\"w\")\n",
+    "f= open(file_new,\"w\")\n",
     "\n",
     "\n",
-    "for z in [z * 0.05 for z in xrange(20)]:\n",
+    "for z in [z * 0.05 for z in range(20)]:\n",
     "\n",
-    "    with open(\"sentiment_file/\"+project_name+\"/\"+s_type+\"_report/\"+s_type+\"_\"+project_name+\"_summary.txt\", \"r\") as ins:\n",
+    "    with open(file_target, \"r\") as ins:\n",
     "            \n",
     "        data = []\n",
     "        i = 1\n",
@@ -103,31 +126,34 @@
     "\n",
     "            Ai = 0\n",
     "            Ti = 0 \n",
-    "        \n",
-    "# --------------------------  After  ----------------------------------------------------\n",
     "            \n",
-    "            after_sen = is_number(result[3].strip())\n",
+    "            \n",
+    "# --------------------------  Before ----------------------------------------------------\n",
+    "    \n",
+    "            before_sen = is_number(result[x_before].strip())\n",
     "\n",
-    "#             if thresholdneg <= float(after_sen) <= thresholdpos:\n",
     "\n",
-    "#                 aneu +=1\n",
-    "#                 aresult = 0  \n",
+    "            if before_sen == '0' :\n",
     "\n",
-    "#             elif float(after_sen) > thresholdpos:\n",
+    "                bneu +=1\n",
+    "                bresult = 0\n",
     "\n",
-    "#                 apos +=1\n",
-    "#                 Ai=3\n",
-    "#                 Ti=3\n",
-    "#                 aresult = 1 \n",
-    "                 \n",
+    "            elif before_sen == '1':\n",
+    "\n",
+    "                bpos +=1\n",
+    "                Ai+=1\n",
+    "                bresult = 1\n",
+    "\n",
+    "            elif before_sen == '-1':\n",
+    "\n",
+    "                bneg +=1\n",
+    "                Ai+=2\n",
+    "                bresult = -1\n",
     "                \n",
     "\n",
-    "#             elif float(after_sen) < thresholdneg:\n",
-    "\n",
-    "#                 aneg +=1\n",
-    "#                 Ai=6\n",
-    "#                 Ti=6\n",
-    "#                 aresult = -1 \n",
+    "# --------------------------  After  ----------------------------------------------------\n",
+    "            \n",
+    "            after_sen = is_number(result[x_after].strip())\n",
     "\n",
     "\n",
     "            if after_sen == '0' :\n",
@@ -150,54 +176,11 @@
     "                Ai=6\n",
     "                Ti=6\n",
     "                aresult = -1\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "# --------------------------  Before ----------------------------------------------------\n",
-    "    \n",
-    "            before_sen = is_number(result[2].strip())\n",
     "\n",
-    "#             if thresholdneg <= float(before_sen) <= thresholdpos:\n",
-    "\n",
-    "#                 bneu +=1\n",
-    "#                 bresult = 0\n",
-    "\n",
-    "#             elif float(before_sen) > thresholdpos:\n",
-    "\n",
-    "#                 bpos +=1\n",
-    "#                 Ai+=1\n",
-    "#                 bresult = 1\n",
-    "\n",
-    "#             elif float(before_sen) > thresholdpos:\n",
-    "\n",
-    "#                 bneg +=1\n",
-    "#                 Ai+=2\n",
-    "#                 bresult = -1\n",
-    "\n",
-    "\n",
-    "            if before_sen == '0' :\n",
-    "\n",
-    "                bneu +=1\n",
-    "                bresult = 0\n",
-    "\n",
-    "            elif before_sen == '1':\n",
-    "\n",
-    "                bpos +=1\n",
-    "                Ai+=1\n",
-    "                bresult = 1\n",
-    "\n",
-    "            elif before_sen == '-1':\n",
-    "\n",
-    "                bneg +=1\n",
-    "                Ai+=2\n",
-    "                bresult = -1\n",
-    " \n",
-    "    \n",
-    " \n",
-    "                \n",
+    "                    \n",
     "# --------------------------  TU  ----------------------------------------------------\n",
     "            \n",
-    "            total = float(result[1].strip()) \n",
+    "            total = float(result[x_tu].strip()) \n",
     "\n",
     "            if thresholdneg <= total <= thresholdpos:\n",
     "\n",
@@ -221,14 +204,25 @@
     "            Tx[Ti]+=1\n",
     "            i +=1 \n",
     "        \n",
-    "        with open('sentiment_file/'+project_name+'/'+s_type+'_report/threshold/threshold.txt', 'a') as the_file:\n",
+    "        with open(file_write, 'a') as the_file:\n",
     "\n",
-    "                the_file.write(\"[ threshold = \"+str(z)+\" ]\"+\"\\n\"+str(Ax)+\"\\n\"+str(Tx)+\"\\n\")  \n",
+    "                the_file.write(\"[ threshold = \"+(\"%.2f\" % z)+\" ]\"+\"\\n\"+str(Ax)+\"\\n\"+str(Tx)+\"\\n\")  \n",
     " \n",
-    "        print \"[ threshold = \"+str(z)+\" ]\"\n",
-    "        print Ax\n",
-    "        print Tx "
+    "        print (\"[ threshold = \"+(\"%.2f\" % z)+\" ]\")\n",
+    "        print (Ax)\n",
+    "        print (Tx)\n",
+    "        \n",
+    "### ผลลัพธ์จะถูกเก็บไว้ที่  /sentiment_file/project_name/lexicon&polyglot/threshold/threshold.txt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -240,14 +234,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
