--- a/[7] Service_API.ipynb
+++ b/[7] Service_API.ipynb
@@ -4,13 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lexicon Report ##\n",
+    "## Service API ##\n",
     "\n",
-    "#### Root_dir = /home/ubuntu/datascience\n",
+    "###  1. Host Service \n",
     "\n",
-    "การออกรายงานผลลัพธ์จะต้องใช้ไฟล์ Dataset ซึ่งจะต้องอัพโหลดไฟล์ไว้ที่ \n",
+    "#### Systemd Auto run\n",
     "\n",
-    "Root_dir/sentiment_file/[project_name]/Dataset/dataset.txt เท่านั้น\n",
+    "vi /lib/systemd/system/senti_pos.service\n",
+    "\n",
+    "#### Enable Newly Added Service \n",
+    "\n",
+    "sudo systemctl daemon-reload\n",
+    "\n",
+    "sudo systemctl enable senti_pos.service\n",
+    "\n",
+    "sudo systemctl start senti_pos.service\n",
+    "\n",
+    "#### Service Command \n",
+    "\n",
+    "Stop running service \n",
+    "\n",
+    "- systemctl stop senti_pos.service  \n",
+    "\n",
+    "Start running service \n",
+    "\n",
+    "- systemctl start senti_pos.service\n",
+    "\n",
+    "Restart running service\n",
+    "\n",
+    "- systemctl restart senti_pos.service \n",
+    "\n",
+    "Status service\n",
+    "\n",
+    "- systemctl status senti_pos.service\n",
+    "\n",
+    "\n",
+    "### 2. Client \n",
+    "\n",
+    "URL : http://52.77.247.131:5000/api/sentiment/v1.0.0/iuferutlkfu34fs\n",
+    "\n",
+    "* Method : POST\n",
+    "\n",
+    "* TYPE : JSON\n",
+    "\n",
+    "* <font color=green >Example {\"text\" : \"Hello\" }</font>\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -24,50 +62,21 @@
    },
    "outputs": [],
    "source": [
-    "# Import Lib\n",
-    "from polyglot.text import Text \n",
-    "from __future__ import division\n",
-    "import pandas as pd\n",
-    "import os, errno  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "###-- Project Name --###\n",
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*- \n",
+    "from flask import Flask, jsonify, request\n",
+    "from flask_restful import Resource, Api \n",
+    "from json import dumps\n",
+    "from polyglot.detect import Detector\n",
+    "from polyglot.text import Text\n",
     "\n",
-    "project_name = \"officeM\" # <--- Rename true,officeM ...\n",
+    "app = Flask(__name__)\n",
+    "api = Api(app)\n",
+    "app.config['JSON_AS_ASCII'] = False\n",
     "\n",
-    " ### Config Lexicon ###\n",
+    "lexicon = '<--- Lexicon --->'\n",
     "\n",
-    "lexicon = \"officeM\" # true,officeM ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- dic_score() : ฟังก์ชั่นหาผลลัพธ์ของคำ เช่น สวัสดี = 1.24543435\n",
-    "- dic_word() : ฟังก์ชั่นหาผลลัพธ์ทั้งประโยค \n",
-    "- dic_sentiment() : ฟังก์ชั่นหาผลรวม positive และ negative ของ Sentence เช่น (1.423234,-0.3342)\n",
-    "- dic_word_sum() : ฟังก์ชั่นหาผลรวมของคำ (positive+negative+neutral) ## ใช้สำหรับหาร\n",
-    "- dic_sentiment_sum() : ฟังก์ชั่นหาผลคะแนน (positive+negative) ## ผลคะแนนที่ได้จาก lexicon\n",
-    "- fraction_sum() : ฟังก์ชั่นรวมผลของ ( dic_sentiment_sum() / dic_word_sum() ) ## ผลคะแนนที่ได้จาก lexicon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "### -- Lexicon summary -- ###\n",
     "def dic_score(word):  \n",
     "\n",
     "    file = open(\"lexicon/\"+lexicon+\"/lexicon.txt\",\"r\")\n",
@@ -76,7 +85,7 @@
     "\n",
     "        value = line.split(\"||\")\n",
     "\n",
-    "        if word == value[2].strip() :\n",
+    "        if word.encode('utf-8') == value[2].strip() :\n",
     "            \n",
     "            try :\n",
     "            \n",
@@ -241,149 +250,67 @@
     "        total = 0\n",
     "    \n",
     "    return total\n",
-    "    "
+    "\n",
+    "\n",
+    "# In[2]:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "@app.route('/api/sentiment/v1.0.0/<uuid>', methods=['GET', 'POST'])\n",
+    "def go_sentiment(uuid):\n",
+    "    content = request.json\n",
+    "    # Token id, Call me\n",
+    "    token = \"iuferutlkfu34fs\" # uuid = token_key\n",
+    "#     onitext = content['text']\n",
+    "    onitext = content['text']\n",
+    "    text = Text(onitext)\n",
+    "    pt = \"\"\n",
+    "    total = 0 \n",
+    "\n",
+    "    # for w in text.words: \n",
+    "    #    \t# text_s = ('%s -->%d'%(w,w.polarity))\n",
+    "    # total+=w.polarity\n",
+    "    count_str = len(text.words)\n",
+    "\n",
+    "    for w in text.words:\n",
+    "        total+=w.polarity\n",
+    "\n",
+    "    print (total)\n",
+    "\n",
+    "    if total > 0:\n",
+    "\n",
+    "        point = \"positive\"\n",
+    "\n",
+    "    elif total == 0:\n",
+    "\n",
+    "        point = \"neutral\"\n",
+    "\n",
+    "    elif total < 0:\n",
+    "\n",
+    "        point = \"negative\"\n",
+    "     \n",
+    "    if uuid == token:\n",
+    "\n",
+    "        sentiment = [\n",
+    "        {\n",
+    "          'score':fraction_sum(onitext),\n",
+    "          'sentiment':point\n",
+    "        }\n",
+    "        ]\n",
+    "\n",
+    "        return jsonify({onitext:sentiment})\n",
+    "\n",
+    "    else : \n",
+    "\n",
+    "        return jsonify({\"id\":\"NULL\"})\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    # app.run(host= '0.0.0.0',debug=True)\n",
+    "    app.run(port=5000, threaded=True, host=('0.0.0.0'))\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ผลลัพธ์ ###\n",
-    "\n",
-    "#### Root_dir = /home/ubuntu/datascience\n",
-    "\n",
-    "ผลลัพธ์ถูกจัดเก็บไว้ที่ Root_dir/sentiment_file/[project_name]/lexicon_report/..\n",
-    "\n",
-    "ไฟล์ที่จะได้รับ \n",
-    "\n",
-    " - 1.lexicon_[project_name]_summary.txt\n",
-    " - 2.answer_[project_name.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Check Folder and Files\n",
-    "\n",
-    "ckdir = 'sentiment_file/'+project_name+'/lexicon_report'\n",
-    "\n",
-    "try:\n",
-    "    os.makedirs(ckdir)\n",
-    "except OSError as e:\n",
-    "    if e.errno != errno.EEXIST:\n",
-    "        raise\n",
-    "\n",
-    "with open(\"sentiment_file/\"+project_name+\"/Dataset/\"+\"dataset.txt\", \"r\") as ins:\n",
-    "    \n",
-    "    data = []\n",
-    "    i = 1\n",
-    "    bneu=0\n",
-    "    bpos=0\n",
-    "    bneg=0\n",
-    "    \n",
-    "    aneu=0\n",
-    "    apos=0\n",
-    "    aneg=0\n",
-    "    \n",
-    "    tneu=0\n",
-    "    tpos=0\n",
-    "    tneg=0\n",
-    "    \n",
-    "    Ax = [0]*9\n",
-    "    Tx = [0]*9\n",
-    "    \n",
-    "    for line in ins :\n",
-    "        \n",
-    "        result = [x.strip() for x in line.split('::')]  \n",
-    "        \n",
-    "        try:\n",
-    "            \n",
-    "            word = result[3]\n",
-    "            \n",
-    "        \n",
-    "        except:\n",
-    "            \n",
-    "            word = 0\n",
-    "        \n",
-    "# ----------- นับสรุปผล --------------\n",
-    "\n",
-    "        Ai = 0\n",
-    "        Ti = 0\n",
-    "\n",
-    "        if result[5] == '0':\n",
-    "            \n",
-    "            aneu +=1\n",
-    "            \n",
-    "        elif result[5] > '0':\n",
-    "            \n",
-    "            apos +=1\n",
-    "            Ai=3\n",
-    "            Ti=3\n",
-    "            \n",
-    "        elif result[5] < '0':\n",
-    "            \n",
-    "            aneg +=1\n",
-    "            Ai=6\n",
-    "            Ti=6\n",
-    "\n",
-    "        if result[6] == '0':\n",
-    "            \n",
-    "            bneu +=1\n",
-    "            \n",
-    "        elif result[6] > '0':\n",
-    "            \n",
-    "            bpos +=1\n",
-    "            Ai+=1\n",
-    "            \n",
-    "        elif result[6] < '0':\n",
-    "            \n",
-    "            bneg +=1\n",
-    "            Ai+=2\n",
-    "                \n",
-    "        if fraction_sum(word) == 0:\n",
-    "            \n",
-    "            tneu +=1\n",
-    "            \n",
-    "        elif fraction_sum(word) > 0:\n",
-    "            \n",
-    "            tpos +=1\n",
-    "            Ti+=1\n",
-    "            \n",
-    "        elif fraction_sum(word) < 0:\n",
-    "            \n",
-    "            tneg +=1\n",
-    "            Ti+=2\n",
-    "        \n",
-    "        if word != '' :\n",
-    "            \n",
-    "            with open('sentiment_file/'+project_name+'/lexicon_report/'+'lexicon_'+lexicon+'_summary.txt', 'a') as the_file:  \n",
-    "\n",
-    "                    the_file.write(\"[\"+str(dic_word(word))+\"\\t\"+str(dic_sentiment(word))+\"\\t\"+str(fraction_sum(word))+\"\\t\"+result[6]+\"\\t\"+result[5]+\"\\t\"+word+\"]\\n\")\n",
-    "\n",
-    "            Ax[Ai]+=1\n",
-    "            Tx[Ti]+=1\n",
-    "            i +=1\n",
-    "            \n",
-    "# แสดงสรุปผล\n",
-    "print (Ax)\n",
-    "print (Tx)\n",
-    "\n",
-    "with open('sentiment_file/'+project_name+'/lexicon_report/'+'answer_'+lexicon+'.txt', 'a') as the_file:  \n",
-    "\n",
-    "                    the_file.write(str(Ax)+\"\\n\"+str(Tx))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
