--- a/[1] Cleaning Data.ipynb
+++ b/[1] Cleaning Data.ipynb
@@ -54,19 +54,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
     "### Config Project Name ###\n",
     "\n",
-    "project_name = \"officeM\"\n",
-    "directory = \"DEC\"\n",
+    "project_name = \"< -- project -- >\" \n",
+    "directory = \"< -- dir -- > \"\n",
     "\n",
     "### --------------- ###\n",
     "\n",
-    "#Target file name path : /sentiment_file/[directory]/compare/output\n",
     "#Set input files name \n",
     "\n",
     "file_before = \"before.csv\"\n",
@@ -164,14 +165,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
