--- a/[4] Dataset-summary-polyglot-report.ipynb
+++ b/[4] Dataset-summary-polyglot-report.ipynb
@@ -17,6 +17,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -25,13 +26,16 @@
     "\n",
     "from polyglot.text import Text \n",
     "from __future__ import division\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import os, errno  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###-- Project Name --###\n",
@@ -51,10 +55,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "### Check Folder and Files\n",
+    "\n",
+    "ckdir = 'sentiment_file/'+project_name+'/polyglot_report'\n",
+    "\n",
+    "try:\n",
+    "    os.makedirs(ckdir)\n",
+    "except OSError as e:\n",
+    "    if e.errno != errno.EEXIST:\n",
+    "        raise\n",
+    "\n",
     "def tu_sentiment(sentence):\n",
     "    \n",
     "    blob = sentence\n",
@@ -102,6 +117,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -250,8 +266,8 @@
     "        Tx[Ti]+=1\n",
     "        i +=1\n",
     "\n",
-    "print Ax\n",
-    "print Tx\n",
+    "print (Ax)\n",
+    "print (Tx)\n",
     "\n",
     "with open('sentiment_file/'+project_name+'/polyglot_report/answer_'+project_name+'.txt', 'a') as the_file:  \n",
     "\n",
@@ -268,14 +284,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
