--- a/[6] senti_pos.ipynb
+++ b/[6] senti_pos.ipynb
@@ -21,30 +21,270 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "### -- Import Lib -- ###\n",
+    "\n",
     "#!/usr/bin/env python\n",
     "# -*- coding: utf-8 -*- \n",
+    "\n",
     "from flask import Flask, jsonify, request\n",
     "from flask_restful import Resource, Api \n",
     "from json import dumps\n",
     "from polyglot.detect import Detector\n",
-    "from polyglot.text import Text\n",
+    "from polyglot.text import Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### -- Select Lexicon -- ###\n",
     "\n",
+    "# lexicon dir : /sentiment_file/lexicon/lexicon.txt\n",
+    "\n",
+    "lexicon = 'officeM'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### -- Lexicon summary -- ###\n",
+    "\n",
+    "def dic_score(word):  \n",
+    "\n",
+    "    file = open(\"lexicon/\"+lexicon+\"/lexicon.txt\",\"r\")\n",
+    "\n",
+    "    for line in file:\n",
+    "\n",
+    "        value = line.split(\"||\")\n",
+    "\n",
+    "        if word == value[2].strip() :\n",
+    "            \n",
+    "            try :\n",
+    "            \n",
+    "                return float(value[0])\n",
+    "            \n",
+    "            except :\n",
+    "                \n",
+    "                return 0 \n",
+    "            \n",
+    "def dic_word(sentence):\n",
+    "    \n",
+    "    blob = sentence\n",
+    "    \n",
+    "    text = Text(blob.lower())\n",
+    "\n",
+    "    positive = 0\n",
+    "    negative =  0\n",
+    "    neutral = 0\n",
+    "    \n",
+    "    if sentence != '' :\n",
+    "\n",
+    "        for w in text.words:\n",
+    "\n",
+    "                result = dic_score(w) \n",
+    "\n",
+    "                if result is None :\n",
+    "\n",
+    "                    result = 0\n",
+    "                \n",
+    "                if result < 0 : \n",
+    "                    \n",
+    "                    negative +=1                \n",
+    "                \n",
+    "                if result == 0 :\n",
+    "                    \n",
+    "                    neutral +=1\n",
+    "                \n",
+    "                if result > 0 :\n",
+    "                    \n",
+    "                    positive +=1\n",
+    "         \n",
+    "        sentence = (positive,negative,neutral)\n",
+    "                \n",
+    "    return sentence    \n",
+    "\n",
+    "def dic_sentiment(sentence):\n",
+    "    \n",
+    "    blob = sentence\n",
+    "    text = Text(blob.lower())\n",
+    "\n",
+    "    positive = 0\n",
+    "    negative =  0\n",
+    "    neutral = 0 \n",
+    "    \n",
+    "    total = 0\n",
+    "\n",
+    "    if sentence != '' :\n",
+    "\n",
+    "        for w in text.words:\n",
+    "\n",
+    "                result = dic_score(w) \n",
+    "\n",
+    "                if result is None :\n",
+    "\n",
+    "                    result = 0\n",
+    "                \n",
+    "                if result < 0 : \n",
+    "                    \n",
+    "                    negative = negative + float(result)                \n",
+    "                \n",
+    "                if result == 0 :\n",
+    "                    \n",
+    "                    neutral = neutral + float(result)\n",
+    "                \n",
+    "                if result > 0 :\n",
+    "                    \n",
+    "                    positive = positive + float(result)                    \n",
+    "                                             \n",
+    "        sentence = positive,negative\n",
+    "                \n",
+    "    return sentence\n",
+    "\n",
+    "def dic_word_sum(sentence):\n",
+    "    \n",
+    "    blob = sentence\n",
+    "    text = Text(blob.lower())\n",
+    "    \n",
+    "    positive = 0\n",
+    "    negative =  0\n",
+    "    neutral = 0\n",
+    "    \n",
+    "    if sentence != '' :\n",
+    "\n",
+    "        for w in text.words:\n",
+    "\n",
+    "                result = dic_score(w) \n",
+    "\n",
+    "                if result is None :\n",
+    "\n",
+    "                    result = 0\n",
+    "                \n",
+    "                if result < 0 : \n",
+    "                    \n",
+    "                    negative +=1\n",
+    "                \n",
+    "                if result == 0 :\n",
+    "                    \n",
+    "                    neutral +=1\n",
+    "                \n",
+    "                if result > 0 :\n",
+    "                    \n",
+    "                    positive +=1\n",
+    "        \n",
+    "        sentence = positive+negative+neutral\n",
+    "                \n",
+    "    return sentence\n",
+    "\n",
+    "def dic_sentiment_sum(sentence):\n",
+    "    \n",
+    "    blob = sentence\n",
+    "    text = Text(blob.lower())\n",
+    "\n",
+    "    positive = 0\n",
+    "    negative =  0\n",
+    "    neutral = 0 \n",
+    "    total = 0\n",
+    "\n",
+    "    if sentence != '' :\n",
+    "\n",
+    "        for w in text.words:\n",
+    "\n",
+    "                result = dic_score(w) \n",
+    "\n",
+    "                if result is None :\n",
+    "\n",
+    "                    result = 0 \n",
+    "                \n",
+    "                if result < 0 : \n",
+    "                    \n",
+    "                    negative = negative + float(result) \n",
+    "                \n",
+    "                if result == 0 :\n",
+    "                    \n",
+    "                    neutral = neutral + float(result) \n",
+    "                \n",
+    "                if result > 0 :\n",
+    "                    \n",
+    "                    positive = positive + float(result) \n",
+    "        \n",
+    "        sentence = positive+negative\n",
+    "                \n",
+    "    return sentence\n",
+    "\n",
+    "def fraction_sum(word):\n",
+    "    \n",
+    "    try : \n",
+    "    \n",
+    "        total = (dic_sentiment_sum(word)/dic_word_sum(word))\n",
+    "    \n",
+    "    except:\n",
+    "        \n",
+    "        total = 0\n",
+    "    \n",
+    "    return total\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### การเรียกใช้งาน API ####\n",
+    "\n",
+    "Url  : http://52.77.247.131:5000/api/sentiment/v1.0.0/iuferutlkfu34fs\n",
+    "\n",
+    "data type : json\n",
+    "parameter : text\n",
+    "\n",
+    "ตัวอย่าง :  {\"text\" : \"Hello\"} \n",
+    "\n",
+    "ผลที่ได้รับ : \n",
+    "\n",
+    "{\n",
+    "    \"Hello\": [\n",
+    "        {\n",
+    "            \"score\": -0.3013698630136986, \n",
+    "            \"sentiment\": \"neutral\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "#### Command \n",
+    "##### jupyter nbconvert --to notebook --execute senti_pos.ipynb\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "app = Flask(__name__)\n",
     "api = Api(app)\n",
     "app.config['JSON_AS_ASCII'] = False\n",
-    "\n",
-    "# กำหนด url สำหรับให้บริการ \n",
-    "# uuid = token_key\n",
     "\n",
     "@app.route('/api/sentiment/v1.0.0/<uuid>', methods=['GET', 'POST'])\n",
     "def go_sentiment(uuid):\n",
     "    content = request.json\n",
     "    # Token id, Call me\n",
-    "    token = \"iuferutlkfu34fs\"\n",
-    "    onitext = content['text'].encode('utf-8')\n",
+    "    token = \"iuferutlkfu34fs\" # uuid = token_key\n",
+    "#     onitext = content['text']\n",
+    "    onitext = content['text']\n",
     "    text = Text(onitext)\n",
     "    pt = \"\"\n",
     "    total = 0 \n",
@@ -57,7 +297,7 @@
     "    for w in text.words:\n",
     "        total+=w.polarity\n",
     "\n",
-    "    print total\n",
+    "    print (total)\n",
     "\n",
     "    if total > 0:\n",
     "\n",
@@ -78,7 +318,9 @@
     "          # 'id': '0',\n",
     "          # 'keyword':'NULL',\n",
     "          # 'score1':'',\n",
-    "          'score':'%.4f'%(total*1.0/count_str),\n",
+    "#           'score':'%.4f'%(total*1.0/count_str),\n",
+    "          'score':fraction_sum(onitext),\n",
+    "          'dic_word':dic_word(onitext),\n",
     "          'sentiment':point\n",
     "        }\n",
     "        ]\n",
@@ -94,6 +336,15 @@
     "    # app.run(host= '0.0.0.0',debug=True)\n",
     "    app.run(port=5000, threaded=True, host=('0.0.0.0'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,14 +356,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
